<resources>
    <string name="app_name">dynamicSystemLibrary</string>
    <string-array name="pizzas">
        <item>Hawaiian</item>
        <item>Pepperoni</item>
        <item>Veggie</item>
    </string-array>
    <string-array name="pastas">
        <item>Spaghetti Bolognese</item>
        <item>Carbonara</item>
    </string-array>
    <string-array name="stores">
        <item>Cambridge</item>
        <item>Manchester</item>
        <item>Liverpool</item>
    </string-array>

    <string name="top_fragment">Home</string>
    <string name="pizza_fragment">Pizza</string>
    <string name="pasta_fragment">Pasta</string>
    <string name="stores_fragment">Stores</string>

    <string name="share_order">Share Order</string>
    <string name="create_order">Create Order</string>

    <string name="hello_blank_fragment">Hello Blank Fragment!</string>
    <string name="tab_description">Main navigation tabs</string>

    <string name="company_name">Bits and Pizzas</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="home_text">Since we opened our doors in 2017, Bits and Pizzas has built its reputation as one of America’s best Italian-Digital restaurants. Some people believe eating out is about being with your friends and family. We believe that good food is best enjoyed while staring at your phone.</string>

    <string name="order_name_hint">Please enter your name</string>
    <string name="order_details_hint">Please enter order details</string>

    <string name="floating_button_description">Updates the edit text fields</string>
    <string name="toast_undone">Undone!</string>
    <string name="snackbar_order_updated">Order Updated!</string>
</resources>